--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
  Theme Name:   Twenty Seventeen Child
- Theme URI:    http://example.com/twenty-fifteen-child/
+ Theme URI:    https://github.com/anuchit33/twentyseventeen-child/
  Description:  Twenty Fifteen Child Theme
- Author:       John Doe
- Author URI:   http://example.com
+ Author:       Anuchit Yai-in
+ Author URI:   https://the-im.com
  Template:     twentyseventeen
- Version:      1.0.0
+ Version:      0.0.1
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
